--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     }
   ],
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "spryker/company-unit-address": "^1.0.0",
+    "spryker/company-business-unit": "^2.0.0"
   },
   "require-dev": {
     "codeception/codeception": "^2.4",
