--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,21 @@
       "email": "gengjozsef86@gmail.com"
     }
   ],
+  "scripts": {
+    "ci": "make ci",
+    "codeception": "make codeception",
+    "phpcs": "make phpcs",
+    "phpstan": "make phpstan"
+  },
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.3",
     "spryker/company-unit-address": "^1.0.0",
     "spryker/company-business-unit": "^2.0.0"
   },
   "require-dev": {
-    "codeception/codeception": "^2.4",
     "fond-of-codeception/spryker": "^1.0",
-    "php-coveralls/php-coveralls": "^2.1",
-    "phpro/grumphp": "^0.14",
-    "sebastian/phpcpd": "^4.0",
-    "spryker/code-sniffer": "^0.12"
+    "spryker/code-sniffer": "*",
+    "spryker-sdk/phpstan-spryker": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -30,7 +33,14 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "FondOfSpryker\\": "tests/FondOfSpryker/"
+      "FondOfSpryker\\": "tests/FondOfSpryker/",
+      "Generated\\": "src/Generated/",
+      "Orm\\Zed\\": "src/Orm/Zed/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   }
 }
